src/FinancialForce Accounting/objects/codaPurchaseInvoiceExpenseLineItem__c.object
<CustomObject>
    <description>The expenses line items on the payable invoice</description>
    <fields>
        <fullName>CalculateTaxValueFromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveTaxRateFromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items (Destination Company)</relationshipLabel>
        <relationshipName>PayableInvoiceExpenseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationNetValue__c</fullName>
        <label>Destination Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceExpenseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceExpenseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceExpenseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EditTaxValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Tax Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GLACode__c</fullName>
        <formula>GeneralLedgerAccount__r.ReportingCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceExpenseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>PurchaseInvoiceExpenseLineItemsInput</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items</relationshipLabel>
        <relationshipName>PayableInvoiceExpenseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsReverseChargeTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalGLACode__c</fullName>
        <formula>LocalGLA__r.ReportingCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local GLA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items (Local GLA)</relationshipLabel>
        <relationshipName>PayableInvoiceExpenseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetValue__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputTaxRate__c</fullName>
        <label>Output Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputTaxValue__c</fullName>
        <label>Output Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OutPut Tax Code for Reverse Charge Tax Code.</description>
        <label>Output Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>PayableInvoiceExpenseLineItemsOutPut</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items</relationshipLabel>
        <relationshipName>Purchase_Invoice_Expense_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseInvoice__c</fullName>
        <label>Payable Invoice Number</label>
        <referenceTo>codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items</relationshipLabel>
        <relationshipName>PurchaseInvoiceExpenseLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SetGLAToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set GLA to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetTaxCodeToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input Tax Code 2</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>PurchaseInvoiceExpenseLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCodeCombined__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Combined Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items (Combined Tax Code)</relationshipLabel>
        <relationshipName>PurchaseInvoiceExpenseLineItemsTCComb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxRate1__c</fullName>
        <label>Input Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRateTotal__c</fullName>
        <formula>TaxRate1__c + TaxRate2__c - OutputTaxRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue1__c</fullName>
        <label>Input Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValueTotal__c</fullName>
        <formula>TaxValue1__c + TaxValue2__c - OutputTaxValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payable Invoice Expense Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payable Invoice Expense Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Invoice Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>